# sleeplight

./: .gitignore  README.md  silkscreen.ai
.github/workflows/: rust_ci.yml
LICENSES/: MIT.txt  README.md
firmware/: Cargo.toml
firmware/src/: app.rs  lib.rs  lightring.rs
hardware/: SleepLight_v2.kicad_pcb  SleepLight_v2.kicad_prl  SleepLight_v2.kicad_pro  SleepLight_v2.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/Components/2171790001/: 2171790001.kicad_sym  MOLEX_2171790001.kicad_mod
hardware/Components/218_4LPST/: 218-4LPST.kicad_sym  SW_218-4LPST.kicad_mod
hardware/Components/ERT-J1VG103FM/: 2025-12-30_17-35-53.bak  2025-12-30_17-35-53.kicad_sym
hardware/Components/ESP32-C3-WROOM-02-N4/: ESP32-C3-WROOM-02-N4.kicad_sym  MODULE_ESP32-C3-WROOM-02-H4.kicad_mod
hardware/Components/GSPTS004901/: 2025-12-29_22-55-59.kicad_sym
hardware/Components/MCP73871-1AAI:ML/: 2025-12-24_05-08-40.kicad_sym
hardware/Components/NR3015T4R7M/: 2025-12-30_22-15-27.bak  2025-12-30_22-15-27.kicad_sym
hardware/Components/S2B-PH-K-S/: 2025-12-29_23-31-54.kicad_sym
hardware/Components/TLV73312PDBVR/: SOT95P280X145-5N.kicad_mod  TLV73312PDBVR.kicad_sym
hardware/Components/TLV73333PDBVR/: SOT95P280X145-5N.kicad_mod  TLV73333PDBVR.bak  TLV73333PDBVR.kicad_sym
ios/SleepLight/: BLEManager.swift  ContentView.swift  FlexColorPickerView.swift  SleepLightApp.swift
ios/SleepLight.xcodeproj/: project.pbxproj
ios/SleepLightTests/: SleepLightTests.swift
ios/SleepLightUITests/: SleepLightUITests.swift  SleepLightUITestsLaunchTests.swift
(+34 files in other folders)
