[package]
edition      = "2024"
name         = "firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2" }
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32c3",
  "unstable",
] }
rtt-target = "0.6.2"
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-hal-smartled = { version = "0.17.0", features = ["esp32c3"] }
smart-leds = "0.4.0"
nb = "1.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
